[package]
name = "resize_jpeg"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/resize_jpeg"
edition = "2021"

[dependencies]
gio = { version = "0.15", features = ["v2_62"] }
glib = { version = "0.15", features = ["v2_62"] }
gtk = { version = "0.15", features = ["v3_24_9"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "jpeg_rayon", "tiff"] }
mozjpeg = "0.9"
mozjpeg-sys = { version = "1.0", features = ["jpeg80_abi"] }
rayon = "1.4"
rexiv2 = "0.9"

[profile.release]
lto = "thin"
