[package]
name = "resize_jpeg"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/resize_jpeg"
edition = "2021"

[dependencies]
gio = { version = "0.18", features = ["v2_62"] }
glib = { version = "0.18", features = ["v2_62"] }
gtk = { version = "0.18", features = ["v3_24_9"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "rayon", "tiff"] }
mozjpeg = "0.10"
mozjpeg-sys = { version = "2.1", features = ["jpeg80_abi"] }
rayon = "1.4"
rexiv2 = "0.10"

[profile.release]
lto = "thin"
