[package]
name = "resize_jpeg"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/resize_jpeg"
edition = "2021"

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
gtk4 = { version = "0.9", features = ["v4_16"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "rayon", "tiff"] }
mozjpeg = "0.10"
mozjpeg-sys = { version = "2.1", features = ["jpeg80_abi"] }
rayon = "1.4"
rexiv2 = "0.10"

[profile.release]
lto = "thin"
